--- a/css/style.css
+++ b/css/style.css
@@ -33,10 +33,7 @@ body {
   margin: 0px;
 }
 
-
-
-.form-unread
-{
+.form-unread{
   border: 1px solid black;
   border-bottom: 2px solid black;
   background-color: #f2f2f2;
@@ -59,9 +56,7 @@ body {
 
 /****************************SPECIFIC-FOOTER********************************/
 
-.footer
-{text-align: center;
-
+.footer {text-align: center;
 }
 
 #owner{
